test/valid/MainMayReturnBoolean/TestMainMayReturnBoolean.plume
/**
 * @author Diogo Marques, 30100
 */
class TestMainMayReturnBoolean extends Object is

	method main : () -> String is
		new MainMayReturnBoolean().main().toString()