test/invalid/ClassCannotExtendItself/ClassCannotExtendItself.plume
/**
 * @author Diogo Marques, 30100
 */
class ClassCannotExtendItself extends ClassCannotExtendItself is